# db-manager

./: .gitignore  .pylintrc  CHANGELOG.md  Makefile  README.md  alembic.ini  manage.py  mypy.ini  pyproject.toml  tasks.md
app/: db.py  dependencies.py  main.py
app/adapters/: source.py
app/adapters/storage/: schema_entity.py
app/api/: dependencies.py
app/api/routers/: system.py
app/api/schemas/: schema_entity.py
app/api/v1/: __init__.py  handlers.py  registration.py
app/api/v1/routers/: schemas.py
app/crud/: schema_entity.py
app/models/: __init__.py  schemas.py
app/services/: synchronizer.py
app/services/aggregates/: entities.py
app/services/entities/: schema.py
app/services/interfaces/: schema_entity.py  source.py
app/services/interfaces/storage/: schema.py  storage.py
app/services/schemas/: schema_entity.py
app/settings/: app.py  db.py  git.py  server.py
cicd/: docker-compose.tests.yml  run_tests_linters.sh
cli/: makemigration.py  migrate.py  start.py
migrations/: env.py
migrations/versions/: 2022-03-11_init_schema_.py  2022-05-03_init_schema_.py
utils/: base_dir.py  pyproject.py
utils/logger/: config.py  filters.py
